fix h1 alignment

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@
 
 .jumbotron h1{
   color:#D7C7B4;
+  margin: auto auto;
 }
 
 h2{
